# RopemasterV2

./: PROJECT_MAP.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: dev_reset_db.md
src/: App.tsx  design-tokens.json  types.ts
src-tauri/: BACKEND_DOCUMENTATION.md  Cargo.toml  app.db  build.rs  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_add_max_team_rating.sql  0003_add_roper_level.sql  0004_soft_delete_policy.sql  0005_add_payoff_allocation.sql  0006_add_admin_pin.sql
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityLogView.tsx  AddTeamModal.tsx  CaptureManagement.tsx  CaptureRunsTab.tsx  Dashboard.tsx  DrawTab.tsx  EventCaptureView.tsx  EventCard.tsx  EventDetails.tsx  EventMetricsCard.tsx  EventsCalendar.tsx  EventsView.tsx  ExportManagement.tsx  ExportTab.tsx  InsightsPanel.tsx  MetricsPanel.tsx  NewEventModal.tsx  NewSeriesModal.tsx  PayoffsManagement.tsx  PayoffsTab.tsx  RecentActivity.tsx  ResultsManagement.tsx  RopersManagement.tsx  SeriesCard.tsx  SeriesOverviewCard.tsx  SettingsManagement.tsx  Sidebar.tsx  StandingsTab.tsx  TeamsManagement.tsx  TeamsTab.tsx
src/components/ui/: avatar.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  popover.tsx  progress.tsx  tabs.tsx
src/hooks/: useRopers.ts  useTeams.ts
src/lib/: api.ts
src/styles/: globals.css
