[package]
name = "roping-manager-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "roping_manager_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
argon2 = "0.4"
rand_core = "0.6"
rand = "0.8"
ed25519-dalek = { version = "1.0", features = ["rand_core"] }
base64 = "0.21"
csv = "1.2"
rust_xlsxwriter = "0.92.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20"
tracing-appender = "0.2"
dirs-next = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
sqlx-cli = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }

